2014-03-27  Andi Kleen  <ak@linux.intel.com>

	* nptl/sysdeps/unix/sysv/linux/x86_64/lowlevellock.h (lll_lock,
	lll_robust_lock, lll_cond_lock, lll_timedlock, lll_robust_cond_lock,
	lll_robust_timedlock, lll_unlock, lll_robust_unlock):
	Remove out of line section. Use cfi intrinsics.
	(LLL_STUB_UNWIND_INFO*): Remove.
	* nptl/sysdeps/unix/sysv/linux/i386/lowlevellock.h (lll_lock,
	lll_robust_lock, lll_cond_lock, lll_timedlock, lll_robust_cond_lock,
	lll_robust_timedlock, lll_unlock, lll_robust_unlock):
	Remove out of line section. Use cfi intrinsics.
	(LLL_STUB_UNWIND_INFO*): Remove.

2014-03-27  Siddhesh Poyarekar  <siddhesh@redhat.com>

	[BZ #16758]
	* nscd/netgroupcache.c (addinnetgrX): Succeed if triplet has
	blank values.

2014-03-26  Paul Pluzhnikov  <ppluzhnikov@google.com>

	* elf/dl-load.c: Convert __builtin_expect into __glibc_{un}likely.

2014-03-26  Joseph Myers  <joseph@codesourcery.com>

	[BZ #16198]
	* sysdeps/x86_64/fpu/fegetenv.c (fegetenv): Use fldenv after
	fnstenv.
	* math/test-fenv-preserve.c: New file.
	* math/Makefile (tests): Add test-fenv-preserve.

2014-03-26  Will Newton <will.newton@linaro.org>

	* benchtests/bench-strtod.c (TIMEOUT): Define to 10.

2014-03-25  Roland McGrath  <roland@hack.frob.com>

	* scripts/versionlist.awk: Partition the version sets and emit all
	GLIBC_* (sorted) before all others (sorted).

2014-03-25  Joseph Myers  <joseph@codesourcery.com>

	* elf/Versions (libc) [EXPORT_UNWIND_FIND_FDE]: Add empty
	GLIBC_2.2.5 version.

2014-03-25 Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* scripts/localplt.awk: Check for PLT generated by internal IFUNC
	calls.

2014-03-25 Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* nptl/sysdeps/unix/sysv/linux/powerpc/bits/pthreadtypes.h: Revert
	previous change.

2014-03-25 Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/powerpc/fpu/libm-test-ulps: Update.

2014-03-25  Andreas Schwab  <schwab@suse.de>
